# Compilers

./: .gitignore  README.md
Code Examples/: grammar.py
Code Examples/CodeGen/: IR.hs  Interm1.hs  Interm3.hs
Code Examples/Interpret/: Examples.hs  Interpret1.hs  Interpret2.hs  Interpret4.hs
Code Examples/Liveness/: Liveness.hs
Exemplos de Código/: AST.hs  Grammar.hs  LR.hs  Typecheck.hs
Exemplos de Código/CodeGen/: Interm2.hs
Exemplos de Código/Interpret/: AST.hs  Interpret3.hs
Exemplos de Código/Liveness/: AST.hs
Lab Classes/C/#00/: README.md
Lab Classes/C/#00/src/: hello.c
Lab Classes/Haskell/#01/dist-newstyle/cache/: config  elaborated-plan  source-hashes  up-to-date
Lab Classes/Haskell/#01/src/: Interpreter.hs
Lab Classes/Haskell/#02/src/: HsLexer.hs  Lexer.x
Lab Classes/Haskell/#03/: parser.cabal
Lab Classes/Haskell/#03/dist-newstyle/cache/: source-hashes
Lab Classes/Haskell/#04/: aula-lab-4.md
Lab Classes/Haskell/#04/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  up-to-date
Lab Classes/Haskell/#04/src/: Parser.y
Práticas/Geral/#00/: aula-lab-0.md
Práticas/Geral/#00/src/: Hello.hs
Práticas/Haskell/#01/: interpretador.cabal
Práticas/Haskell/#01/dist-newstyle/cache/: improved-plan  plan.json  solver-plan
Práticas/Haskell/#02/: aula-lab-2-hs.md
Práticas/Haskell/#02/src/: Lexer.hs  Main.hs
Práticas/Haskell/#03/: aula-lab-3.md
Práticas/Haskell/#03/dist-newstyle/cache/: compiler  config  (+5 more)
Práticas/Haskell/#03/src/: Parser.hs
Práticas/Haskell/#04/src/: Lexer.hs  Lexer.x  Parser.hs
(+2 files in other folders)
