
name:                interpretador
version:             0.1.0.0
synopsis:            Exercícios de Compiladores (CC3001)
description:         Interpretador funcional de programas sequênciais
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10
                     
executable runtests
  main-is:             Tests.hs
  other-modules:       Interpreter
  build-depends:       base, hspec
  hs-source-dirs:      src
  default-language:    Haskell2010
